--- a/2/index.html
+++ b/2/index.html
@@ -11,7 +11,7 @@
 <p>Push the buttons to move the DarkOrange square:</p>
 <div id="myfilter" style="position:absolute;background-color:#000000;opacity:0.3;width:400px;height:270px;display:none"></div>
 <div id="myrestartbutton" style="position:absolute;padding-top:120px;padding-left:150px;display:none;"><button onclick="restartGame()" >Restart</button></div>
-<div id="canvascontainer" style="background-image: url('2.jpg'); width:400px"></div> 
+<div id="canvascontainer" style="background-image: url('2.JPG'); width:400px"></div> 
 
 <br>
 <div style="text-align:center;width:320px;">
