--- a/1/new.html
+++ b/1/new.html
@@ -17,7 +17,7 @@
 <div style="text-align:center;width:320px;">
  <button ontouchstart="moveup()" onmousedown="moveup()" onmouseup="clearmove()" style="padding:20px">UP</button><br><br>
   <button ontouchstart="moveleft()" onmousedown="moveleft()" onmouseup="clearmove()" style="padding:20px">LEFT</button>
-  <button ontouchstart="moveright()" onmousedown="moveright()" onmouseup="clearmove()" style="padding:20px; margin-left:55px">RIGHT</button><br><br>
+  <button ontouchstart="moveright()" onmousedown="moveright()" onmouseup="clearmove()" style="padding:20px">RIGHT</button><br><br>
   <button ontouchstart="movedown()" onmousedown="movedown()" onmouseup="clearmove()" style="padding:20px">DOWN</button>
 </div>
 <br>
