--- a/1/new.html
+++ b/1/new.html
@@ -15,10 +15,10 @@
 
 <br>
 <div style="text-align:center;width:320px;">
- <button ontouchstart="moveup()" onmousedown="moveup()" onmouseup="clearmove()" style="padding:20px">UP</button><br><br>
-  <button ontouchstart="moveleft()" onmousedown="moveleft()" onmouseup="clearmove()" style="padding:20px">LEFT</button>
-  <button ontouchstart="moveright()" onmousedown="moveright()" onmouseup="clearmove()" style="padding:20px">RIGHT</button><br><br>
-  <button ontouchstart="movedown()" onmousedown="movedown()" onmouseup="clearmove()" style="padding:20px">DOWN</button>
+   <button ontouchstart="moveup()" onmousedown="moveup()" onmouseup="clearmove()" style="padding:35px">UP</button><br>
+  <button ontouchstart="moveleft()" onmousedown="moveleft()" onmouseup="clearmove()" style="padding:30px">LEFT</button>
+  <button ontouchstart="moveright()" onmousedown="moveright()" onmouseup="clearmove()" style="padding:30px; margin-left:0px">RIGHT</button><br>
+  <button ontouchstart="movedown()" onmousedown="movedown()" onmouseup="clearmove()" style="padding:30px">DOWN</button>
 </div>
 <br>
 
