--- a/2/index.html
+++ b/2/index.html
@@ -15,10 +15,8 @@
 
 <br>
 <div style="text-align:center;width:320px;">
- <button ontouchstart="moveup()" onmousedown="moveup()" onmouseup="clearmove()" style="padding:20px">UP</button><br><br>
-  <button ontouchstart="moveleft()" onmousedown="moveleft()" onmouseup="clearmove()" style="padding:20px">LEFT</button>
-  <button ontouchstart="moveright()" onmousedown="moveright()" onmouseup="clearmove()" style="padding:20px; margin-left:55px">RIGHT</button><br><br>
-  <button ontouchstart="movedown()" onmousedown="movedown()" onmouseup="clearmove()" style="padding:20px">DOWN</button>
+  <button ontouchstart="moveup()" onmousedown="moveup()" onmouseup="clearmove()" style="padding:62px; margin-bottom: 2px;">UP</button><br>
+  <button ontouchstart="movedown()" onmousedown="movedown()" onmouseup="clearmove()" style="padding:50px">DOWN</button>
 </div>
 <br>
 
